# autoSOAP

./: .gitignore
autosoap/: drizzle.config.ts  kirimase.config.json  package.json  pnpm-lock.yaml  prettier.config.mjs
autosoap/src/app/: layout.tsx  page.tsx
autosoap/src/app/(app)/: layout.tsx
autosoap/src/app/(app)/account/: AccountCard.tsx  UpdateEmailCard.tsx  UpdateNameCard.tsx  UserSettings.tsx  page.tsx
autosoap/src/app/(app)/dashboard/: page.tsx
autosoap/src/app/(app)/notes/: page.tsx  useOptimisticNotes.tsx
autosoap/src/app/(auth)/: layout.tsx
autosoap/src/app/(auth)/sign-in/: page.tsx
autosoap/src/app/(auth)/sign-up/: page.tsx
autosoap/src/app/api/account/: route.ts
autosoap/src/components/: Navbar.tsx  Sidebar.tsx  SidebarItems.tsx
autosoap/src/components/auth/: SignOutBtn.tsx
autosoap/src/components/notes/: NoteEditor.tsx  NoteForm.tsx  NoteList.tsx
autosoap/src/components/shared/: BackButton.tsx
autosoap/src/components/ui/: ThemeToggle.tsx
autosoap/src/config/: nav.ts
autosoap/src/lib/: env.mjs  utils.ts
autosoap/src/lib/actions/: notes.ts  users.ts
autosoap/src/lib/api/notes/: mutations.ts  queries.ts
autosoap/src/lib/auth/: lucia.ts  utils.ts
autosoap/src/lib/db/: index.ts  migrate.ts
autosoap/src/lib/db/migrations/: 0001_luxuriant_blazing_skull.sql  0002_brainy_jasper_sitwell.sql
backend/: generate.py  prompt.txt  pyproject.toml  test_code.ipynb  transcript.json  transcript.txt
backend/data/: output-3.5.json
backend/data/transcript2/: expected-transcript2.txt  output2-3.5.json  transcript2.txt
(+8 files in other folders)
