[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zacharypfiz <ztpfizcode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.13.3"
langchain = "^0.1.9"
langchain-openai = "^0.0.8"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
